# Django-with-celery-and-rabbitMQ

./: README.md  pyproject.toml
Shop_project/: __init__.py  celery.py  settings.py  urls.py
cart/: cart.py  urls.py  views.py
cart/templates/cart/: detail.html
orders/: admin.py  models.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
project_tests/: test_with_selenium.py
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_category_managers_alter_product_image.py
shop/templates/shop/: base.html  environment.html
shop/templates/shop/product/: detail.html  list.html
templates/: environment.html
