[tool.poetry]
name = "shop-project"
version = "0.1.0"
description = ""
authors = ["veiiev <worldloflwarcraft@mail.ru>"]
readme = "README.md"
packages = [{include = "shop_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
pillow = "^10.0.0"
sorl-thumbnail = "^12.9.0"
celery = "^5.3.1"
flower = "^2.0.0"
eventlet = "^0.33.3"
cryptography = "^41.0.2"
selenium = "^4.10.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
